# nanaisisi.github.io

./: .gitignore  .hintrc  CHANGELOG.md  GQuuuuuuX  LICENSE  LICENSE-MIT  README.md  agent.md  biome.json  debug-wasm.html  debug_wasm.html  deno.json  index.html  nanaisisi.github.io.code-workspace  package.json  server.js  server.ts  settings.html
.github/: dependabot.yml
.github/workflows/: dependabot.yml  release.yml  rust.yml  test-wasm.yml
doc/: coding_rules.md  concept.md  doc_overview.md  next_update.md
kousei_rs/: Cargo.toml
kousei_rs/src/: lib.rs
nanai_wasm_rs/: Cargo.toml  test_all.bat  test_all.nu  test_all.ps1  test_all.sh
nanai_wasm_rs/.cargo/: config.toml
nanai_wasm_rs/pkg/: nanai_wasm_rs.d.ts  nanai_wasm_rs.js  nanai_wasm_rs_bg.wasm  nanai_wasm_rs_bg.wasm.d.ts  package.json
nanai_wasm_rs/src/: config.rs  lib.rs  month.rs  month_names.rs  navigation.rs  tests.rs  theme.rs  types.rs
pages/: GQuuuuuuX  anime.html  cli_tool.html  credit.html  env.html  fiction_book.html  format.html  gewalt.html  git.html  helix.html  hobby.html  insert.html  joke.html  menu.html  mil_tech.html  military.html  music.html  naming.html  nav.html  pages.html  r3.html  rust_tool.html  sailor.html  shell_comparison.html  shell_features.html  shell_nushell_migration.html  software.html  tech_menu.html  thilmera7.ini  vscode.html  win_mainte.html  xyzzy.html  youtube_likes.html
pages/mil/: air_force.html  armored.html  base.html  fighters.html  gnd_force.html  gun.html  land_vhicle.html  mar_force.html  miL_menu.html  mil_column.html  mil_com.html  mil_huma.html  mil_human.html  mil_rd.html  (+5 more)
script/: companion.js  companion.ts  error-handler.js  menu-handler.js  menu-month-display.js  menu_handler.js  menu_month_display.js  month-display.js  month_display.js  theme-manager.js  theme_manager.js  wasm-loader.js  wasm-test.js  wasm_test.js
src/: anime.html  credit.html  env.html  fiction_book.html  format.html  git.html  helix.html  hobby.html  insert.html  joke.html  kousei.html  main.html  menu.html  military.html  music.html  naming.html  nav.html  r3.html  remainder.html  rust_tool.html  settings.html  software.html  tech_menu.html  thilmera7.ini  vscode.html  xyzzy.html  youtube_likes.html
style/: menu-styles.css  menu_styles.css  style.css  wasm-test-styles.css  wasm_test_styles.css
tech/: r3.html  shell_features.html  xyzzy.html
test/: server.ts  wasm-test.html  wasm_test.html
(+33 files in other folders)
