[package]
name = "nanai_wasm_rs"
version = "0.1.0"
edition = "2024"
description = "For my web page, Rust lib for WASM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nanaisisi/nanaisisi.github.io"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "*"
js-sys = "*"
wasm-bindgen-futures = "*"
thiserror = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde-wasm-bindgen = "*"

[dev-dependencies]
wasm-bindgen-test = "*"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[profile.dev]
debug = true
