[package]
name = "nanai_wasm_rs"
version = "0.1.0"
edition = "2024"
description = "For my web page, Rust lib for WASM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nanaisisi/nanaisisi.github.io"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[profile.dev]
debug = true
