[package]
name = "nanai_wasm_rs"
version = "0.1.0"
edition = "2024"
description = "For my web page, Rust lib for WASM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nanaisisi/nanaisisi.github.io"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.126"
js-sys = "0.3.103"
wasm-bindgen-futures = "0.4.76"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.76"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[profile.dev]
debug = true
